changes in 1.4.1.7
* Bug 414 Localized version of land card are not considered basic lands
changes in 1.4.1.6
* Bug: fixed when updating localized cards - not all cards where loaded when updating
* Bug 252: fixed unique count and own unique count should not consider localized cards as unique
* Bug: fixed when groupping by name it would not consider localized cards as the same
changes in 1.4.1.5
* Added sort button to Export deck page
* Bug 409 "equals" filter not working in filter dialog 
* Migration to deprecate forTradeCount field (use tag instead)
* Fixed - Wizards html deck export - sideboard correction
* Fixed that deck is not saved when editing some string fields inline
changes in 1.4.1.3
* Italian translation for types
* Fixed materilize deck action
changes in 1.4.1.2
* Feature Identity Support - added support for identity filter for colors (for commander)
* Fixed invalid values in Set filter page
changes in 1.4.1.0
* Bug: fixed card reconcile (own count update in db view)
* Feature :read only collection/deck
* Bug: columns of deck randomly resetting to one column
* Feature: import format auto-detect
* Ownership column just show V or O letters
* Bug: fixed exception when groupping (for legality column)
* Bug: cost cc text is drawn to close to the right
* Fixed land in Khans of Tarkir
* Bug: restore to default does not work for "show only last set" filter option
* Bug: fixed lagging on "Reset Filter"
* Docs updates
changes in 1.4.0.11
* Fixed bug when doing software update on startup (it cannot show the dialog)
* Updated database with Khans of Tarkir
* Fixed card update handler not to block UI
* Fixed set context assist to show newly added sets
* Adjusted set image size to fit oversized icons like for M15
changes in 1.4.0.10
* Fixed dead lock on startup
* Added wishlist and fortrade tags in context assist
* Special tags can now be key value pairs, change card condition tags with key/value with key "c", i.e. c=mint
* Added deckbox import/export