@@ -1,0 +1,6 @@
+package com.reflexit.magiccards.core;
+
+public class CorePreferenceConstants {
+	public static final String DIR_BACKUP = "backupDir";
+	public static final String DIR_MAGICCARDS = "magiccardsDir";
+}
