@@ -1,11 +1,12 @@
 package com.reflexit.magiccards.ui.preferences;
 
+import com.reflexit.magiccards.core.CorePreferenceConstants;
 import com.reflexit.magiccards.ui.MagicUIActivator;
 
 /**
  * Constant definitions for plug-in preferences
  */
-public class PreferenceConstants {
+public class PreferenceConstants extends CorePreferenceConstants {
 	private static final String PREFIX = MagicUIActivator.PLUGIN_ID;
 	public static final String GATHERER_SITE = PREFIX + ".gathererSite";
 	public static final String GATHERER_UPDATE = PREFIX + ".gathererUpdate";
